testdata/err/string_literal_unterminated_unicode.err.txt
error: unexpected token
- testdata/err/string_literal_unterminated_unicode.tn:1:16
1 | main = || -> { "foo \u{fffff x" };
  |                ^^^^^^^^^^^^^^^^
help: valid tokens at this point: ["}", IdentifierName]
